Updated the way to store calculated boxes of node